# byungyeok-checker

./: README.md
md/: 01-environment-setup.md
python-backend/: README.md  pyproject.toml  requirements.txt
python-backend/app/: __init__.py  main.py
python-backend/app/core/: config.py  database.py
python-backend/app/models/: company.py  military_company.py
python-backend/app/routers/: __init__.py  items.py  military.py  users.py
python-backend/app/schemas/: __init__.py  item.py  user.py
python-backend/app/services/: __init__.py
